# fin-studio-lib

./: .gitignore  README.md  pyproject.toml
src/vault_research_toolkit/: __init__.py  frontmatter.py  panel.py  research.py  sections.py
